--- a/homepage.html
+++ b/homepage.html
@@ -30,7 +30,7 @@
                             <a href="#" class="menu-link">Trang Chủ</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#" class="menu-link">Khóa Học</a>
+                            <a href="course-detail.html" class="menu-link">Khóa Học</a>
                         </li>
                         <li class="menu-item">
                             <a href="#" class="menu-link">Luyện Đề</a>
@@ -39,7 +39,7 @@
                             <a href="#" class="menu-link">Blog</a>
                         </li>
                         <li class="btn">
-                            <a href="#" class="btn btn-secondary">Đăng Nhập</a>
+                            <a href="login.html" class="btn btn-secondary">Đăng Nhập</a>
                         </li>
                     </ul>
                 </div>
@@ -108,7 +108,7 @@
                                         biểu
                                         đồ.
                                     </p>
-                                    <a href="#" class="card-badge" style="--color-bg: #CFF1E0; --color-text: #0C7C42">4
+                                    <a href="course-list.html" class="card-badge" style="--color-bg: #CFF1E0; --color-text: #0C7C42">4
                                         Khóa Học</a>
                                 </div>
                             </li>
