--- a/course-detail.html
+++ b/course-detail.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/button.css">
+    <link rel="icon" href="./image/logo.png" >
     <title>ELEANIFY</title>
 </head>
 
@@ -30,7 +32,7 @@
                             <a href="homepage.html" class="menu-link">Trang Chủ</a>
                         </li>
                         <li class="menu-item">
-                            <a href="course-list.html" class="menu-link">Khóa Học</a>
+                            <a href="course-detail.html" class="menu-link">Khóa Học</a>
                         </li>
                         <li class="menu-item">
                             <a href="#" class="menu-link">Luyện Đề</a>
