--- a/course-list.html
+++ b/course-list.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/homepage.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/button.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="icon" href="./image/logo.png" >
     <title>ELEANIFY</title>
 </head>
 
@@ -27,10 +30,10 @@
                     </div>
                     <ul class="menu">
                         <li class="menu-item">
-                            <a href="#" class="menu-link">Trang Chủ</a>
+                            <a href="homepage.html" class="menu-link">Trang Chủ</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#" class="menu-link">Khóa Học</a>
+                            <a href="course-detail.html" class="menu-link">Khóa Học</a>
                         </li>
                         <li class="menu-item">
                             <a href="#" class="menu-link">Luyện Đề</a>
@@ -39,7 +42,7 @@
                             <a href="#" class="menu-link">Blog</a>
                         </li>
                         <li class="btn">
-                            <a href="#" class="btn btn-secondary">Đăng Nhập</a>
+                            <a href="login.html" class="btn btn-secondary">Đăng Nhập</a>
                         </li>
                     </ul>
                 </div>
