--- a/homepage.html
+++ b/homepage.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/homepage.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/button.css">
+    <link rel="icon" href="./image/logo.png" >
     <title>ELEANIFY</title>
 </head>
 
@@ -27,7 +29,7 @@
                     </div>
                     <ul class="menu">
                         <li class="menu-item">
-                            <a href="#" class="menu-link">Trang Chủ</a>
+                            <a href="homepage.html" class="menu-link">Trang Chủ</a>
                         </li>
                         <li class="menu-item">
                             <a href="course-detail.html" class="menu-link">Khóa Học</a>
@@ -58,11 +60,13 @@
                                 <br>các chứng chỉ MOS.
                             </p>
                             <div class="banner-btn">
-                                <a href="#" class="banner-btn banner-btn-primary">Xây dựng lộ trình</a>
-                                <a href="#" class="banner-btn banner-btn-secondary">
-                                    <span>Bắt đầu học</span>
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </a>
+                                <div class="btn">
+                                    <a href="#" class="btn btn-banner-primary">Xây dựng lộ trình</a>
+                                    <a href="#" class="btn btn-banner-secondary">
+                                        <span>Bắt đầu học</span>
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class="banner-image">
